refactor(qcommon): minor java21 refactoring as advised by IDEA