@@ -1,14 +1,12 @@
 package org.qcmg.common.vcf;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-
 import java.util.Arrays;
 
 import org.junit.Test;
 import org.qcmg.common.util.Constants;
 import org.qcmg.common.util.TabTokenizer;
+
+import static org.junit.Assert.*;
 
 public class VcfRecordTest {
 
@@ -16,14 +14,14 @@ public class VcfRecordTest {
 	public void infoFieldTest(){
 		final String[] parms = {"chrY","2675826",".","TG","CA",".","COVN12;MIUN","SOMATIC;NNS=4;END=2675826","ACCS","TG,5,37,CA,0,2","AA,1,1,CA,4,1,CT,3,1,TA,11,76,TG,2,2,TG,0,1"};
 		final VcfRecord re = new VcfRecord(parms);
-		
-		assertTrue(re.getInfo().equals("SOMATIC;NNS=4;END=2675826"));
+
+        assertEquals("SOMATIC;NNS=4;END=2675826", re.getInfo());
 		re.appendInfo("NNS=5");
 		assertEquals("5", re.getInfoRecord().getField("NNS"));
-		
-		assertEquals(true, re.getInfo().contains("SOMATIC"));
-		assertEquals(true, re.getInfo().contains("NNS=5"));
-		assertEquals(true, re.getInfo().contains("END=2675826"));
+
+        assertTrue(re.getInfo().contains("SOMATIC"));
+        assertTrue(re.getInfo().contains("NNS=5"));
+        assertTrue(re.getInfo().contains("END=2675826"));
 		
 		re.setInfo("NNS=6");
 		assertEquals("NNS=6", re.getInfo());
@@ -43,7 +41,7 @@ public class VcfRecordTest {
 		//only compare CHROM POS REF ALT
 		String[] parms1 = {"chrY","2675826",".",ref, alt,".","COVN12;MIUN","SOMATIC;NNS=4;END=2675826","ACCS","TG,5,37,CA,0,2","AA,1,1,CA,4,1,CT,3,1,TA,11,76,TG,2,2,TG,0,1"};
 		re = new VcfRecord(parms1);
-		assertTrue(re.equals(re1));
+        assertEquals(re, re1);
 	}
 	
 	@Test
@@ -89,7 +87,7 @@ public class VcfRecordTest {
 	 
 		// expecting end to be inserted by toString, and to be equal to start + 1 (compound snp)
 		String reToString = re.toString();
-		assertEquals(true, reToString.endsWith(Constants.NEW_LINE));
+        assertTrue(reToString.endsWith(Constants.NEW_LINE));
 		
 		String[] parm = reToString.split(Constants.TAB_STRING);
 		assertEquals(8, parm.length);	
@@ -109,7 +107,7 @@ public class VcfRecordTest {
 		assertEquals(Constants.MISSING_DATA_STRING, re.getId());
 		
 		re.appendId(null);
-		assertEquals(null, re.getId());
+        assertNull(re.getId());
 		re.appendId("");
 		assertEquals("", re.getId());
 		re.appendId(Constants.MISSING_DATA_STRING);
@@ -138,7 +136,7 @@ public class VcfRecordTest {
  			} else if ( i == 2 ) {
  				assertEquals("OK", re.getSampleFormatRecord(i).getSampleColumnString());
  			} else {
- 				assertTrue(re.getSampleFormatRecord(i) == null);
+                assertNull(re.getSampleFormatRecord(i));
  			}
  		}
 				
@@ -151,7 +149,7 @@ public class VcfRecordTest {
 		String[] params = TabTokenizer.tokenize(line);
 		VcfRecord re = new VcfRecord(params);
 		assertEquals(re.getFormatFields().size(), 2);
-		assertEquals("ACCS", re.getFormatFields().get(0));
+		assertEquals("ACCS", re.getFormatFields().getFirst());
 		
 		//second sample missing
 		line = "chr2\t92281414\t.\tAC\tTG\t.\tSBIAS;SAT3\tEND=92281415\tACCS\tAC,1,1,TG,0,4\t";
@@ -159,7 +157,7 @@ public class VcfRecordTest {
  		re = new VcfRecord(params);
 		assertEquals(re.getFormatFields().size(), 3);
 		assertEquals("ACCS", re.getFormatFields().get(0));
-		assertFalse(re.getFormatFields().get(1).equals(Constants.MISSING_DATA_STRING));
+        assertNotEquals(Constants.MISSING_DATA_STRING, re.getFormatFields().get(1));
 		
 		//first sample missing
 		line = "chr2\t92281414\t.\tAC\tTG\t.\tSBIAS;SAT3\tEND=92281415\tACCS\t\tAC,1,1,TG,0,4";
@@ -167,7 +165,7 @@ public class VcfRecordTest {
  		re = new VcfRecord(params);
 		assertEquals(re.getFormatFields().size(), 3);
 		assertEquals("ACCS", re.getFormatFields().get(0));
-		assertTrue(re.getFormatFields().get(1).equals(Constants.MISSING_DATA_STRING));
+        assertEquals(Constants.MISSING_DATA_STRING, re.getFormatFields().get(1));
 		
 		
 		//three sample missing
@@ -176,9 +174,9 @@ public class VcfRecordTest {
  		re = new VcfRecord(params);
 		assertEquals(re.getFormatFields().size(), 4);
 		assertEquals("ACCS", re.getFormatFields().get(0));
-		assertTrue(re.getFormatFields().get(1).equals(Constants.MISSING_DATA_STRING));
-		assertTrue(re.getFormatFields().get(2).equals(Constants.MISSING_DATA_STRING));
-		assertTrue(re.getFormatFields().get(3).equals(Constants.MISSING_DATA_STRING));
+        assertEquals(Constants.MISSING_DATA_STRING, re.getFormatFields().get(1));
+        assertEquals(Constants.MISSING_DATA_STRING, re.getFormatFields().get(2));
+        assertEquals(Constants.MISSING_DATA_STRING, re.getFormatFields().get(3));
 		
 		//first sample missing
 		line = "chr2\t92281414\t.\tAC\tTG\t.\tSBIAS;SAT3\tEND=92281415\tACCS\t\t.\t.";
@@ -186,8 +184,8 @@ public class VcfRecordTest {
  		re = new VcfRecord(params);
 		assertEquals(re.getFormatFields().size(), 4);
 		assertEquals("ACCS", re.getFormatFields().get(0));
-		assertTrue(re.getFormatFields().get(1).equals(Constants.MISSING_DATA_STRING));
-		assertTrue(re.getFormatFields().get(2).equals(Constants.MISSING_DATA_STRING));
-		assertTrue(re.getFormatFields().get(3).equals(Constants.MISSING_DATA_STRING));
+        assertEquals(Constants.MISSING_DATA_STRING, re.getFormatFields().get(1));
+        assertEquals(Constants.MISSING_DATA_STRING, re.getFormatFields().get(2));
+        assertEquals(Constants.MISSING_DATA_STRING, re.getFormatFields().get(3));
 	}
 }
